coding home page
:)

--- a/index.html
+++ b/index.html
@@ -47,9 +47,49 @@
     </div>
 
     <div id="main" class="grid">
+
+      <div id="intro" class="width-12-12-m width-12-12">
+        <div id="intro-holder">
+          <h1>We are the music makers. We are the dreamers of the dream.</h1>
+        </div>
+      </div>
+
+      <div id="work" class="width-12-12-m width-12-12">
+
+        <h3>Selected Work</h3>
+
+        <div id="work-holder" class="grid">
+
+          <div class="width-12-12-m width-6-12 work-item">
+            <a class="inner" href="" title="Hell Yes">
+              <div class="work-inside">
+                <h2>Hell Yes</h2>
+                <p>Live Twitter. The good, the bad, the ugly. And the bots. Everything with a "Hell Yes!"</p>
+              </div>
+              <img title="Every Single Person" src="images/yes.png" />
+            </a>
+          </div>
+
+          <div class="width-12-12-m width-6-12 work-item">
+            <a class="inner" href="" title="Every Single Person">
+              <div class="work-inside">
+                <h2>Every Single Person</h2>
+                <p>Every single reported COVID-19 case by country.</p>
+              </div>
+              <img title="Every Single Person" src="images/everysinglecase.png" />
+            </a>
+          </div>
+
+        <div>
+
+      </div>
+
     </div>
 
     <div id="footer" class="grid">
+      <div class="width-12-12-m width-12-12">
+        <p>Copyright ©2020 · Kevin J Lahoda</p>
+      </div>
     </div>
 
   </div>
