--- a/working.html
+++ b/working.html
@@ -63,18 +63,20 @@
           <div class="width-12-12-m width-6-12 work-item">
             <a class="inner" href="" title="">
               <div class="work-inside">
-                <h2>Item Title</h2>
-                <p>This is a subtitle. It's nice to leave hints.</p>
+                <h2>Hell Yes</h2>
+                <p>Live Twitter. The good, the bad, the ugly. And the bots. Everything with a "Hell Yes!"</p>
               </div>
+              <img title="Every Single Person" src="images/yes.png" />
             </a>
           </div>
 
           <div class="width-12-12-m width-6-12 work-item">
             <a class="inner" href="" title="">
               <div class="work-inside">
-                <h2>Another Item</h2>
-                <p>This is a subtitle. I can say anything I want to here.</p>
+                <h2>Every Single Person</h2>
+                <p>Every single reported COVID-19 case by country.</p>
               </div>
+              <img title="Every Single Person" src="images/everysinglecase.png" />
             </a>
           </div>
 
