--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8"/>
   <meta name="keywords" content="design, html, css, frontend, developer, designer">
   <meta name="description" content="Personal Website of Kevin Lahoda">
   <title>Kevin Lahoda</title>
@@ -50,7 +51,7 @@
 
       <div id="intro" class="width-12-12-m width-12-12">
         <div id="intro-holder">
-          <h1>We are the music makers. We are the dreamers of the dream.</h1>
+          <h1>We are the music makers. And we are the dreamers of the dreams.</h1>
         </div>
       </div>
 
@@ -78,6 +79,40 @@
               </div>
               <img title="Every Single Person" src="images/everysinglecase.png" />
             </a>
+          </div>
+
+        <div>
+
+      </div>
+
+      <div id="writings" class="width-12-12-m width-12-12">
+
+        <h3>Writing</h3>
+
+        <div id="writings-holder" class="grid">
+
+          <div class="width-12-12-m width-6-12 writing-item">
+            <div class="date-holder"><p class="date">18 APR, 2020</p></div>
+            <h2><a href="">Fusce Varius Risus</a></h2>
+            <p>Cras ac gravida neque. Nam euismod suscipit purus. Ut tortor mi, interdum eu vehicula at, congue non augue. Nulla facilisi. Fusce varius risus ut efficitur ornare. Sed non metus et ipsum scelerisque condimentum. Proin volutpat odio ipsum, sed luctus elit bibendum sed.<p>
+          </div>
+
+          <div class="width-12-12-m width-6-12 writing-item">
+            <div class="date-holder"><p class="date">18 APR, 2020</p></div>
+            <h2><a href="">Cras Hendrerit Eleifend</a></h2>
+            <p>Nam efficitur viverra justo, ut commodo justo elementum rhoncus. Donec eu laoreet diam. Praesent ornare mauris ut magna.<p>
+          </div>
+
+          <div class="width-12-12-m width-6-12 writing-item">
+            <div class="date-holder"><p class="date">18 APR, 2020</p></div>
+            <h2><a href="">Cras Hendrerit Eleifend</a></h2>
+            <p>Nam efficitur viverra justo, ut commodo justo elementum rhoncus. Donec eu laoreet diam. Praesent ornare mauris ut magna.<p>
+          </div>
+
+          <div class="width-12-12-m width-6-12 writing-item">
+            <div class="date-holder"><p class="date">18 APR, 2020</p></div>
+            <h2><a href="">Fusce Varius Risus</a></h2>
+            <p>Cras ac gravida neque. Nam euismod suscipit purus. Ut tortor mi, interdum eu vehicula at, congue non augue. Nulla facilisi. Fusce varius <a href="">risus ut efficitur</a> ornare. Sed non metus et ipsum scelerisque condimentum. Proin volutpat odio ipsum, sed luctus elit bibendum sed.<p>
           </div>
 
         <div>
