--- a/working.html
+++ b/working.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8"/>
   <meta name="keywords" content="design, html, css, frontend, developer, designer">
   <meta name="description" content="Personal Website of Kevin Lahoda">
   <title>Kevin Lahoda</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script> 
   <script src="js/main.js"></script>
   <link rel="stylesheet" type="text/css" href="css/grid.css">
-  <link rel="stylesheet" type="text/css" href="css/working.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 
@@ -50,7 +51,7 @@
 
       <div id="intro" class="width-12-12-m width-12-12">
         <div id="intro-holder">
-          <h1>We are the music makers. We are the dreamers of the dream.</h1>
+          <h1>We are the music makers. And we are the dreamers of the dreams.</h1>
         </div>
       </div>
 
@@ -61,7 +62,7 @@
         <div id="work-holder" class="grid">
 
           <div class="width-12-12-m width-6-12 work-item">
-            <a class="inner" href="" title="">
+            <a class="inner" href="" title="Hell Yes">
               <div class="work-inside">
                 <h2>Hell Yes</h2>
                 <p>Live Twitter. The good, the bad, the ugly. And the bots. Everything with a "Hell Yes!"</p>
@@ -71,7 +72,7 @@
           </div>
 
           <div class="width-12-12-m width-6-12 work-item">
-            <a class="inner" href="" title="">
+            <a class="inner" href="" title="Every Single Person">
               <div class="work-inside">
                 <h2>Every Single Person</h2>
                 <p>Every single reported COVID-19 case by country.</p>
@@ -84,6 +85,39 @@
 
       </div>
 
+      <div id="writings" class="width-12-12-m width-12-12">
+
+        <h3>Writing</h3>
+
+        <div id="writings-holder" class="grid">
+
+          <div class="width-12-12-m width-6-12 writing-item">
+            <div class="date-holder"><p class="date">18 APR, 2020</p></div>
+            <h2><a href="">Fusce Varius Risus</a></h2>
+            <p>Cras ac gravida neque. Nam euismod suscipit purus. Ut tortor mi, interdum eu vehicula at, congue non augue. Nulla facilisi. Fusce varius risus ut efficitur ornare. Sed non metus et ipsum scelerisque condimentum. Proin volutpat odio ipsum, sed luctus elit bibendum sed.<p>
+          </div>
+
+          <div class="width-12-12-m width-6-12 writing-item">
+            <div class="date-holder"><p class="date">18 APR, 2020</p></div>
+            <h2><a href="">Cras Hendrerit Eleifend</a></h2>
+            <p>Nam efficitur viverra justo, ut commodo justo elementum rhoncus. Donec eu laoreet diam. Praesent ornare mauris ut magna.<p>
+          </div>
+
+          <div class="width-12-12-m width-6-12 writing-item">
+            <div class="date-holder"><p class="date">18 APR, 2020</p></div>
+            <h2><a href="">Cras Hendrerit Eleifend</a></h2>
+            <p>Nam efficitur viverra justo, ut commodo justo elementum rhoncus. Donec eu laoreet diam. Praesent ornare mauris ut magna.<p>
+          </div>
+
+          <div class="width-12-12-m width-6-12 writing-item">
+            <div class="date-holder"><p class="date">18 APR, 2020</p></div>
+            <h2><a href="">Fusce Varius Risus</a></h2>
+            <p>Cras ac gravida neque. Nam euismod suscipit purus. Ut tortor mi, interdum eu vehicula at, congue non augue. Nulla facilisi. Fusce varius <a href="">risus ut efficitur</a> ornare. Sed non metus et ipsum scelerisque condimentum. Proin volutpat odio ipsum, sed luctus elit bibendum sed.<p>
+          </div>
+
+        <div>
+
+      </div>
 
     </div>
 
