--- a/blog-single.html
+++ b/blog-single.html
@@ -40,7 +40,7 @@
         <ul>
           <li><a href="about.html">About</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="blog.html">Blog</a></li>
+          <li><a class="active" href="blog.html">Blog</a></li>
           <li><a href="contact.html">Contact</a></li>
        </ul> 
       </div>
@@ -49,73 +49,30 @@
 
     <div id="main" class="grid">
 
-      <div id="intro" class="width-12-12-m width-12-12">
-        <div id="intro-holder">
-          <h1>We are the music makers. And we are the dreamers of the dreams.</h1>
-        </div>
-      </div>
-
-      <div id="work" class="width-12-12-m width-12-12">
-
-        <h3><a title="Portfolio" href="portfolio.html">Selected Work</a></h3>
-
-        <div id="work-holder" class="grid">
-
-          <div class="width-12-12-m width-6-12 work-item">
-            <a class="inner" href="portfolio-single.html" title="Hell Yes">
-              <div class="work-inside">
-                <h2>Hell Yes</h2>
-                <p>Live Twitter. The good, the bad, the ugly. And the bots. Everything with a "Hell Yes!"</p>
-              </div>
-              <img title="Every Single Person" src="images/yes.png" />
-            </a>
-          </div>
-
-          <div class="width-12-12-m width-6-12 work-item">
-            <a class="inner" href="portfolio-single.html" title="Every Single Person">
-              <div class="work-inside">
-                <h2>Every Single Person</h2>
-                <p>Every single reported COVID-19 case by country.</p>
-              </div>
-              <img title="Every Single Person" src="images/everysinglecase.png" />
-            </a>
-          </div>
-
-        <div>
-
-      </div>
-
       <div id="writings" class="width-12-12-m width-12-12">
 
         <h3><a title="Blog" href="blog.html">Writing</a></h3>
 
         <div id="writings-holder" class="grid">
 
-          <div class="width-12-12-m width-6-12 writing-item">
+          <div class="width-12-12-m width-9-12 writing-item">
             <div class="date-holder"><p class="date">18 APR, 2020</p></div>
             <h2><a href="">Fusce Varius Risus</a></h2>
             <p>Cras ac gravida neque. Nam euismod suscipit purus. Ut tortor mi, interdum eu vehicula at, congue non augue. Nulla facilisi. Fusce varius risus ut efficitur ornare. Sed non metus et ipsum scelerisque condimentum. Proin volutpat odio ipsum, sed luctus elit bibendum sed.<p>
+
+            <p>
+              <img title="Every Single Person" src="images/yes-big.png" />
+              <span class="caption">Nice image caption here.</span>
+            </p>
+
+           <p>Donec nec massa ullamcorper, faucibus nibh et, blandit erat. Nunc risus justo, fringilla nec dictum eu, laoreet vel mi. Aenean pretium sit amet est sed fringilla. Curabitur non ante molestie, commodo odio nec, tempus nulla. Fusce scelerisque neque dignissim magna molestie dictum. Nam ac enim at neque aliquam ullamcorper. Aliquam erat volutpat. Vestibulum vehicula quis nibh sed faucibus. Vestibulum felis neque, hendrerit quis semper id, porta vitae nisi. Donec velit metus, lacinia vitae viverra eu, ultrices non neque.</p>
+
+           <p>In rutrum, nisi sed eleifend venenatis, tellus est volutpat nulla, sed posuere quam velit non odio. Proin vel quam pulvinar nunc faucibus pulvinar sit amet sed lorem. Nullam maximus, ante non euismod iaculis, leo neque ultricies ligula, tristique sodales purus libero nec dolor. Donec volutpat metus vitae finibus laoreet. Donec ut eros non nisi efficitur gravida non at eros. Aliquam in neque aliquam, consequat sapien ac, luctus nisl. Curabitur lacinia ligula id aliquet ullamcorper. Aenean mattis ut massa sed auctor. Phasellus sit amet lectus maximus, malesuada est a, vestibulum libero. Proin dui sapien, congue vel varius eu, rhoncus in ligula.</p>
+
+           <p>Sed eleifend quam non nisi elementum varius. Curabitur posuere sit amet ex vitae vehicula. Cras eleifend quam tempus fringilla finibus. Duis suscipit semper justo, quis scelerisque massa vestibulum quis. In imperdiet ornare nunc. Vestibulum at ligula eu sapien laoreet varius. Sed dapibus, purus maximus congue porttitor, arcu dolor tincidunt purus, eu vulputate leo lorem quis libero. Nunc tempor pellentesque auctor. Praesent pretium lorem ac ipsum elementum venenatis. Fusce vitae arcu pharetra, dignissim tortor quis, ornare lectus. Phasellus sed condimentum nunc. Suspendisse dapibus, orci vel sagittis ornare, risus elit gravida nunc, nec posuere dolor nulla accumsan est. </p>
           </div>
 
-          <div class="width-12-12-m width-6-12 writing-item">
-            <div class="date-holder"><p class="date">18 APR, 2020</p></div>
-            <h2><a href="">Cras Hendrerit Eleifend</a></h2>
-            <p>Nam efficitur viverra justo, ut commodo justo elementum rhoncus. Donec eu laoreet diam. Praesent ornare mauris ut magna.<p>
-          </div>
-
-          <div class="width-12-12-m width-6-12 writing-item">
-            <div class="date-holder"><p class="date">18 APR, 2020</p></div>
-            <h2><a href="">Cras Hendrerit Eleifend</a></h2>
-            <p>Nam efficitur viverra justo, ut commodo justo elementum rhoncus. Donec eu laoreet diam. Praesent ornare mauris ut magna.<p>
-          </div>
-
-          <div class="width-12-12-m width-6-12 writing-item">
-            <div class="date-holder"><p class="date">18 APR, 2020</p></div>
-            <h2><a href="">Fusce Varius Risus</a></h2>
-            <p>Cras ac gravida neque. Nam euismod suscipit purus. Ut tortor mi, interdum eu vehicula at, congue non augue. Nulla facilisi. Fusce varius <a href="">risus ut efficitur</a> ornare. Sed non metus et ipsum scelerisque condimentum. Proin volutpat odio ipsum, sed luctus elit bibendum sed.<p>
-          </div>
-
-        <div>
+        </div>
 
       </div>
 
