--- a/blog.html
+++ b/blog.html
@@ -38,10 +38,10 @@
 
       <div id="nav" class="width-12-12-m width-7-12">
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a class="active" href="blog.html">Blog</a></li>
+          <li><a href="contact.html">Contact</a></li>
        </ul> 
       </div>
 
@@ -49,45 +49,9 @@
 
     <div id="main" class="grid">
 
-      <div id="intro" class="width-12-12-m width-12-12">
-        <div id="intro-holder">
-          <h1>We are the music makers. And we are the dreamers of the dreams.</h1>
-        </div>
-      </div>
-
-      <div id="work" class="width-12-12-m width-12-12">
-
-        <h3>Selected Work</h3>
-
-        <div id="work-holder" class="grid">
-
-          <div class="width-12-12-m width-6-12 work-item">
-            <a class="inner" href="" title="Hell Yes">
-              <div class="work-inside">
-                <h2>Hell Yes</h2>
-                <p>Live Twitter. The good, the bad, the ugly. And the bots. Everything with a "Hell Yes!"</p>
-              </div>
-              <img title="Every Single Person" src="images/yes.png" />
-            </a>
-          </div>
-
-          <div class="width-12-12-m width-6-12 work-item">
-            <a class="inner" href="" title="Every Single Person">
-              <div class="work-inside">
-                <h2>Every Single Person</h2>
-                <p>Every single reported COVID-19 case by country.</p>
-              </div>
-              <img title="Every Single Person" src="images/everysinglecase.png" />
-            </a>
-          </div>
-
-        <div>
-
-      </div>
-
       <div id="writings" class="width-12-12-m width-12-12">
 
-        <h3>Writing</h3>
+        <h3><a title="Blog" href="blog.html">Writing</a></h3>
 
         <div id="writings-holder" class="grid">
 
