--- a/portfolio-single.html
+++ b/portfolio-single.html
@@ -49,71 +49,30 @@
 
     <div id="main" class="grid">
 
-      <div id="intro" class="width-12-12-m width-12-12">
-        <div id="intro-holder">
-          <h1>We are the music makers. And we are the dreamers of the dreams.</h1>
-        </div>
-      </div>
+      <div id="portfolio" class="width-12-12-m width-12-12">
 
-      <div id="work" class="width-12-12-m width-12-12">
+        <h3><a href="portfolio.html">Portfolio</a></h3>
 
-        <h3><a title="Portfolio" href="portfolio.html">Selected Work</a></h3>
+        <div id="portfolio-holder" class="grid">
 
-        <div id="work-holder" class="grid">
-
-          <div class="width-12-12-m width-6-12 work-item">
+          <div class="width-12-12-m width-12-12 work-item">
             <a class="inner" href="portfolio-single.html" title="Hell Yes">
               <div class="work-inside">
-                <h2>Hell Yes</h2>
+                <h2>Hell Yes!</h2>
                 <p>Live Twitter. The good, the bad, the ugly. And the bots. Everything with a "Hell Yes!"</p>
               </div>
-              <img title="Every Single Person" src="images/yes.png" />
+              <img title="Every Single Person" src="images/yes-big.png" />
             </a>
           </div>
 
-          <div class="width-12-12-m width-6-12 work-item">
-            <a class="inner" href="portfolio-single.html" title="Every Single Person">
-              <div class="work-inside">
-                <h2>Every Single Person</h2>
-                <p>Every single reported COVID-19 case by country.</p>
-              </div>
-              <img title="Every Single Person" src="images/everysinglecase.png" />
-            </a>
+          <div class="width-12-12-m width-9-12">
+            <h4>A Sub Header</h4>
+            <p>Praesent posuere non dui ac interdum. Maecenas ac vulputate massa. Etiam a est ligula. Nam congue posuere enim et convallis. In lacinia dui urna, at posuere quam sollicitudin vel.</p>
+            <p>Quisque eu justo in mauris rutrum mollis. Maecenas sit amet scelerisque est, nec eleifend nisl. Vivamus pulvinar egestas elit vel bibendum. Donec iaculis purus est, quis efficitur arcu facilisis quis.</p>
+            <p>Duis malesuada libero nec nisi pharetra, vel iaculis neque elementum. Donec porttitor sem quis eros ornare, vel sodales mauris consequat.</p>
+            <p><a title="View Project" target="_blank" href="">View Project</a></p>
           </div>
 
-        <div>
-
-      </div>
-
-      <div id="writings" class="width-12-12-m width-12-12">
-
-        <h3><a title="Blog" href="blog.html">Writing</a></h3>
-
-        <div id="writings-holder" class="grid">
-
-          <div class="width-12-12-m width-6-12 writing-item">
-            <div class="date-holder"><p class="date">18 APR, 2020</p></div>
-            <h2><a href="">Fusce Varius Risus</a></h2>
-            <p>Cras ac gravida neque. Nam euismod suscipit purus. Ut tortor mi, interdum eu vehicula at, congue non augue. Nulla facilisi. Fusce varius risus ut efficitur ornare. Sed non metus et ipsum scelerisque condimentum. Proin volutpat odio ipsum, sed luctus elit bibendum sed.<p>
-          </div>
-
-          <div class="width-12-12-m width-6-12 writing-item">
-            <div class="date-holder"><p class="date">18 APR, 2020</p></div>
-            <h2><a href="">Cras Hendrerit Eleifend</a></h2>
-            <p>Nam efficitur viverra justo, ut commodo justo elementum rhoncus. Donec eu laoreet diam. Praesent ornare mauris ut magna.<p>
-          </div>
-
-          <div class="width-12-12-m width-6-12 writing-item">
-            <div class="date-holder"><p class="date">18 APR, 2020</p></div>
-            <h2><a href="">Cras Hendrerit Eleifend</a></h2>
-            <p>Nam efficitur viverra justo, ut commodo justo elementum rhoncus. Donec eu laoreet diam. Praesent ornare mauris ut magna.<p>
-          </div>
-
-          <div class="width-12-12-m width-6-12 writing-item">
-            <div class="date-holder"><p class="date">18 APR, 2020</p></div>
-            <h2><a href="">Fusce Varius Risus</a></h2>
-            <p>Cras ac gravida neque. Nam euismod suscipit purus. Ut tortor mi, interdum eu vehicula at, congue non augue. Nulla facilisi. Fusce varius <a href="">risus ut efficitur</a> ornare. Sed non metus et ipsum scelerisque condimentum. Proin volutpat odio ipsum, sed luctus elit bibendum sed.<p>
-          </div>
 
         <div>
 
