--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
   <meta name="keywords" content="design, html, css, frontend, developer, designer">
   <meta name="description" content="Personal Website of Kevin Lahoda">
   <title>Kevin Lahoda</title>
+  <link rel="icon" type="image/png" href="images/icon.png">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script> 
   <script src="js/main.js"></script>
   <link rel="stylesheet" type="text/css" href="css/grid.css">
@@ -54,7 +55,7 @@
         <div id="writings-holder" class="grid">
 
           <div class="width-12-12-m width-9-12 writing-item">
-            <h2><a href="">Contact</a></h2>
+            <h3><a href="">Contact</a></h3>
             <p>Cras ac gravida neque. Nam euismod suscipit purus. Ut tortor mi, interdum eu vehicula at, congue non augue. Nulla facilisi. Fusce varius risus ut efficitur ornare. Sed non metus et ipsum scelerisque condimentum. Proin volutpat odio ipsum, sed luctus elit bibendum sed.<p>
 
           </div>
