--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
   <meta name="keywords" content="design, html, css, frontend, developer, designer">
   <meta name="description" content="Personal Website of Kevin Lahoda">
   <title>Kevin Lahoda</title>
+  <link rel="icon" type="image/png" href="images/icon.png">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script> 
   <script src="js/main.js"></script>
   <link rel="stylesheet" type="text/css" href="css/grid.css">
